# benchml

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  api.html  build-docs.pinned.yml  build-docs.yml  configure.py  dev.html  env.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  use.html
_sources/: api.rst.txt
_sources/api/: benchml.accumulator.rst.txt  benchml.analysis.rst.txt  benchml.basic.rst.txt  benchml.benchmark.rst.txt  benchml.conformal.rst.txt  benchml.data.rst.txt  benchml.descriptors.descr_basic.rst.txt  benchml.descriptors.rst.txt  benchml.ensemble.rst.txt  benchml.filters.random_matrix.rst.txt  benchml.filters.rst.txt  benchml.hyper.rst.txt  benchml.inputs.rst.txt  benchml.kernels.kern_basic.rst.txt  benchml.kernels.rst.txt  benchml.logger.rst.txt  benchml.matrix.rst.txt  benchml.models.common.rst.txt  benchml.models.mod_basic.rst.txt  benchml.models.mod_bench.rst.txt  benchml.models.mod_bench_class.rst.txt  benchml.models.mod_bench_xtal.rst.txt  benchml.models.mod_dscribe.rst.txt  benchml.models.mod_logd.rst.txt  benchml.models.mod_logd_ai.rst.txt  benchml.models.mod_xy.rst.txt  benchml.models.rst.txt  benchml.pipeline.rst.txt  benchml.plugins.plugin_asap.rst.txt  benchml.plugins.plugin_check.rst.txt  benchml.plugins.plugin_cx.rst.txt  benchml.plugins.plugin_dscribe.rst.txt  benchml.plugins.plugin_gylmxx.rst.txt  (+16 more)
analysis/: analysis.ipynb  bml_analysis_func.py  bml_analysis_io.py  bml_analysis_plot.py  bml_model_list.py  bml_name_acronym.list  extract_kernel.py  join.py  plot_lc.py
analysis-kit/: analysis.ipynb  bml_analysis_func.py  bml_analysis_io.py  bml_analysis_plot.py
api/: benchml.accumulator.html  benchml.analysis.html  benchml.basic.html  benchml.benchmark.html  benchml.conformal.html  benchml.data.html  benchml.descriptors.descr_basic.html  benchml.descriptors.html  benchml.ensemble.html  benchml.filters.html  benchml.filters.random_matrix.html  benchml.html  benchml.hyper.html  benchml.inputs.html  benchml.kernels.html  benchml.kernels.kern_basic.html  benchml.logger.html  benchml.matrix.html  benchml.models.common.html  benchml.models.html  benchml.models.mod_basic.html  benchml.models.mod_bench.html  benchml.models.mod_bench_class.html  benchml.models.mod_bench_xtal.html  benchml.models.mod_dscribe.html  benchml.models.mod_logd.html  benchml.models.mod_logd_ai.html  benchml.models.mod_xy.html  benchml.pipeline.html  benchml.plugins.html  benchml.plugins.plugin_asap.html  benchml.plugins.plugin_check.html  benchml.plugins.plugin_cx.html  benchml.plugins.plugin_dscribe.html  benchml.plugins.plugin_gylmxx.html  benchml.plugins.plugin_nphil.html  benchml.plugins.plugin_physchem.html  benchml.plugins.plugin_rdkit.html  benchml.plugins.plugin_soap.html  benchml.plugins.plugin_torch.html  (+9 more)
benchml/: BENCHMLRC.in  __init__.py  accumulator.py  analysis.py  basic.py  benchmark.py  conformal.py  data.py  ensemble.py  filters.py  hyper.py  inputs.py  kernels.py  logger.py  matrix.py  pipeline.py  predictors.py  ptable.py  readwrite.py  splits.py  transforms.py  utils.py
docs/: Makefile  conf.py  index.rst
models/: bmol_acsf.html  bmol_cm.html  bmol_ecfp.html  bmol_ecfp_class.html  bmol_gylm.html  bmol_gylm_match_class.html  bmol_mbtr.html  bmol_pdf.html  bmol_physchem.html  bmol_physchem_class.html  bmol_soap.html  bxtal_acsf.html  bxtal_esm.html  bxtal_gylm.html  bxtal_mbtr.html  bxtal_pdf.html  bxtal_physchem.html  bxtal_soap.html  dscribe.html  ecfp.html  gylm.html  logd.html  logd_ai.html  logd_extensive.html  models.html  soap.html  xy_classifiers.html  xy_regressors.html
test/: test_all.py
tests/: test_data.py
(+134 files in other folders)
