[metadata]
name = BenchML
version = attr: benchml.__version__
url = https://github.com/capoe/benchml
author = Carl Poelking
author_email = cp605@cam.ac.uk
maintainer = Carl Poelking
maintainer_email = cp605@cam.ac.uk
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
keywords = 
    chemical
    physicochemical
    atomistic
    machine learning
    pipelining
    benchmarking
description = Machine-learning pipelining and benchmarking suite geared towards the physical sciences.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE.txt

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
scripts =
    bin/bbatch
    bin/binfo
    bin/binput
    bin/bmark
    bin/bmeta
    bin/bml
install_requires =
    numpy
    scipy
    scikit-learn
